Fix error found on mobile browsers

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,7 +24,7 @@
    min-height: 100vh !important;
    margin: 0px;
    padding: 0px;
-   font-family: century gothic, normal !important;
+   font-family: Century Gothic,CenturyGothic,PT sans,sans-serif !important;
    height: 100vh !important;
    overflow: auto;
  }
